# srig-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/flashbay/: __init__.py  board.py  client.py  exceptions.py  plugin.py  serial.py  session.py
src/siliconrig/: __init__.py  board.py  client.py  exceptions.py  plugin.py  serial.py  session.py
tests/: conftest.py  test_board.py  test_client.py  test_serial.py
